2009-08-17 chaos (0.9.9a)
	 * Fixed hide share
	 * Removed OK confirmation on command success. Now if no error then success. Also reglist.
	 * Updated plugman info outputs
	 * Removed hublink plugin (no longer supported)
	 * Added host_header variable to allow removing of login headers for verlihub and plugins
	 * Reverted customredirects to version er2 for troubleshooting (no effect)
	 * Removed simplify (replaced by share convert api) MUST fix use hub variables to use this API correctly (currently broken)
	 * Moved share convert api into stringutils
	 * Added +release command
	 * Added +info command
	 * Moved to major version 0.9.9a
	 * Removed min_frequency
	 * Added frequency_lock
	 * Updated some project text files
	 * Reset frequency values
	 * Renamed mode declarations
	 * Added status for header
	 * Removed soft stepping support for older CPU's
	 * Replaced mainchat away support (+chat/+nochat)
	 * Fixed maxshare bug
	 * Changed header information
	 * Multiple type def fixes
	 * Fixed a bug in customredirects
	 * Removed and edited some triggers
	 * License updates in all files
	 * Multiple gcc 4.3x fixes
	 * Multiple win32 compat and fixes
	 * Several socket adjustments
	 * Increased default buffer sizes for metro networks (higher capacity)
2009-05-05 netcelli (0.9.8e)
	 * Fixed a possible crash
	 * Re-added hub_version variable
	 * Fixed a crash on FreeBSD with pluginterface

2009-05-16 netcelli (0.9.8e)

	 * Fixed possible reg exploit if an user is admin
	 * Added OS detection in configure script
	 * Removed trigger execution (it doesn't work very well and it's not secure)
	 * Send $BassPass only if user is really regged
	 * Change max length of send_as column to 25
	 * !getip, !getinfo, !gethost, !hidekick and !unhidekick return same info 2 times if the argument is followed by a space
	 * Added frequency meaning (thx to Seth)
	 * Check if $Key is already sent
	 * Don't report wrong password if user is not regged