@@ -1,4 +1,5 @@
 2009-08-17 chaos (0.9.9a)
+	 * Added passive user list
 	 * Fixed hide share
 	 * Removed OK confirmation on command success. Now if no error then success. Also reglist.
 	 * Updated plugman info outputs
